2008-02-22  jtl  <jtl@schoenberg.laudi.ka>

	* src/de/schlund/pfixxml/resources/internal/DocrootResourceOnFileSystemImpl.java (toURL): 
	toURL is deprecated for file, use toURI().toURL()

2008-02-22  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* .classpath: 
	* lib/spring-2.0.7.jar: 
	* lib/spring-2.5.1.jar: 
	Updated Spring to release 2.5.1.

2008-02-22  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/generator/iwrpgen/IWrapperAnnotationProcessor.java: 
	* src/de/schlund/pfixcore/util/TransformerCallback.java: 
	* src/de/schlund/pfixcore/webservice/json/parser/JSONParser.java: 
	* src/de/schlund/pfixcore/workflow/app/DefaultAuthIWrapperState.java: 
	* src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java: 
	* src/de/schlund/pfixxml/config/IWrapperConfig.java: 
	* src/de/schlund/pfixxml/config/PageRequestConfig.java: 
	* src/de/schlund/pfixxml/targets/SharedLeafFactory.java: 
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/ReadOnlyBean.java: 
	Fixed some more compiler warnings.
	
	* build.xml: 
	* skel/build-skel.xml: 
	Seperated build process for Ant tasks: First the tasks needed for StatusCodeLib
	generation are built. Then StatusCodeLib is built and then the rest of 
	the tasks is built.


2008-02-21  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/lucefix/Tripel.java: 
	* src/de/schlund/pfixcore/lucefix/IncludeFileHandler.java: 
	* src/de/schlund/pfixcore/lucefix/DocumentCache.java: 
	* src/de/schlund/pfixcore/lucefix/PfixReadjustment.java: 
	* src/de/schlund/pfixcore/scripting/ScriptingUtil.java: 
	* src/de/schlund/pfixcore/scriptedflow/vm/VirtualHttpServletRequest.java: 
	* src/de/schlund/pfixcore/generator/IWrapperParam.java: 
	* src/de/schlund/pfixcore/generator/IWrapperIndexedParam.java: 
	* src/de/schlund/pfixcore/generator/IHandlerFactory.java: 
	* src/de/schlund/pfixcore/generator/RequestData.java: 
	* src/de/schlund/pfixcore/generator/casters/ToDate.java: 